2010-09-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/utils.h, src/filetypesprivate.h, src/filetypes.c,
   src/filetypes.h, src/document.c, doc/geany.txt, doc/geany.html,
   data/filetypes.txt2tags, data/filetypes.markdown,
   data/filetypes.restructuredtext:
   Add symbol_list_sort_mode per-filetype setting, set to sort by line
   number by default for Markdown, reStructuredText and Txt2Tags.
   Add utils_get_setting() macro for reading a key from a home or
   system keyfile.
   Move GeanyFiletypePrivate to filetypesprivate.h.
 * src/Makefile.am, src/ui_utils.c, configure.ac, wscript:
   Link with X11 if found to fix linking with a recent GNU ld.
 * src/document.c:
   Avoid delay and redrawing when automatically opening a new document
   after closing one.
 * scintilla/LexForth.cxx, scintilla/makefile.win32,
   scintilla/KeyWords.cxx, scintilla/Makefile.am, src/highlighting.c,
   src/about.c, src/filetypes.c, src/filetypes.h, THANKS,
   data/filetypes.forth, data/filetype_extensions.conf, ChangeLog,
   wscript:
   Add Forth filetype (patch by Thomas Huth, thanks).
 * src/tools.c:
   Remove unnecessary 'fix' from r5224 as it breaks configuring custom
   commands for 'Send Selection to' (oops).


2010-09-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/editor.c:
   When commenting/uncommenting with single-line comment characters,
   ignore any end of line characters before evaluating the current line.
 * data/filetypes.python:
   Simplify Python Compile/Syntax Check command.


2010-09-23  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keyfile.c, src/search.c, src/search.h, doc/geany.txt,
   doc/geany.html:
   Add hidden pref 'find_selection_type' with option to repeat last
   search when there's no selection.
   Change default Find Selection behaviour to not let the X selection
   override the current word (can be confusing).
   Add docs for Find Selection commands.
 * src/document.c: